[package]
name = "crowdfunding-app"
version = "0.1.0"
authors = ["Sundeep Charan Ramkumar <webdevdesign@sundeepcharan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
solana-program = "1.7.12"

[features]
no-entrypoint = []